# Multi-Agent--Council

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CODE_REVIEW_SENIOR.md  FRD_MultiAgent_Prototype_v4.docx  PLAN.md  README.md  not_implemented.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/sme/: ai_ml_engineer.md  business_analyst.md  cloud_architect.md  data_engineer.md  data_scientist.md  database_expert.md  devops_engineer.md  frontend_developer.md  iam_architect.md  ml_engineer.md  qa_engineer.md  security_analyst.md  software_architect.md  technical_writer.md  test_engineer.md  ux_designer.md
docs/: FRD_AUDIT_REPORT.md  config-quick-reference.md  llm-configuration.md  vibe-prompts.md
docs/knowledge/: README.md
src/: __init__.py
src/agents/: __init__.py  analyst.py  clarifier.py  code_reviewer.py  council.py  critic.py  executor.py  formatter.py  memory_curator.py  orchestrator.py  planner.py  researcher.py  reviewer.py  sme_spawner.py  verifier.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  complexity.py  debate.py  ensemble.py  events.py  models.py  pipeline.py  react.py  sdk_integration.py  sme_registry.py  verdict.py
src/schemas/: __init__.py  analyst.py  clarifier.py  code_reviewer.py  council.py  critic.py  planner.py  researcher.py  reviewer.py  sme.py  verifier.py
src/session/: __init__.py  compaction.py  logging.py  persistence.py
src/tools/: __init__.py  custom_tools.py  web_tools.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  cost.py  errors.py  events.py  logging.py
tests/: __init__.py  conftest.py  test_analyst_exhaustive.py  test_clarifier_exhaustive.py  test_cli_exhaustive.py  test_code_reviewer_exhaustive.py  test_complexity_exhaustive.py  test_cost_exhaustive.py  test_council_agents_exhaustive.py  test_critic_exhaustive.py  test_debate_exhaustive.py  test_ensemble_exhaustive.py  test_errors_exhaustive.py  test_events_exhaustive.py  test_executor_exhaustive.py  test_formatter_exhaustive.py  test_logging_exhaustive.py  test_memory_curator_exhaustive.py  test_orchestrator_exhaustive.py  test_pipeline_exhaustive.py  test_planner_exhaustive.py  test_researcher_exhaustive.py  test_reviewer_exhaustive.py  test_schemas_exhaustive.py  test_sdk_integration_exhaustive.py  test_session_exhaustive.py  test_settings_exhaustive.py  test_sme_registry_exhaustive.py  test_sme_spawner_exhaustive.py  test_verdict_exhaustive.py  test_verifier_exhaustive.py
tests/e2e/: __init__.py  defect_report.json  glm_client.py  test_e2e_glm.py
tests/integration/: __init__.py  test_tier_workflows.py
tests/unit/: __init__.py  test_analyst.py  test_clarifier.py  test_code_reviewer.py  test_complexity_classifier.py  test_config.py  test_core.py  test_council.py  test_council_exhaustive.py  test_critic.py  (+16 more)
(+35 files in other folders)
