[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Multi-Agent Reasoning System with three-tier architecture: Council + Agents + Dynamic SMEs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kapardi", email = "kapardi@example.com"}
]
keywords = ["agents", "multi-agent", "claude", "ai", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "streamlit>=1.40.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",  # For XLSX support
    "pillow>=10.0.0",   # For image support
    "python-pptx>=0.6.0",  # For PPTX support
    "plotly>=5.0.0",  # For debate viewer charts
    "pyyaml>=6.0.0",  # For YAML frontmatter parsing
    # Optional LLM provider SDKs (install as needed)
    # "openai>=1.0.0",     # For OpenAI provider
    # "google-generativeai>=0.3.0",  # For Google provider
    # "mistral>=0.1.0",    # For Mistral provider
    # "cohere>=5.0.0",     # For Cohere provider
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
mas = "src.cli.main:app"

[project.urls]
Homepage = "https://github.com/kapardi/multi-agent-system"
Documentation = "https://github.com/kapardi/multi-agent-system/docs"
Repository = "https://github.com/kapardi/multi-agent-system"
Issues = "https://github.com/kapardi/multi-agent-system/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pdm]
distribution = true
